notes on conclusinon of GDPS turning into advice for faciliators and removing comments on agency.

--- a/_posts/thesis_chapters/2024-6-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-6-6-Gdps.md
@@ -1264,7 +1264,7 @@ She had been made aware by her daughter Ne about the relevant game variables. In
 
 Other children come and play the game but only for less than a minute before leaving. While their feedback is non verbal the very short length of time that some of them spend is noticeable.  After the last one leaves Molly comments "It's so frustrating." In interactions we can see a similar message coming from peers in the playtesting process. They praise the look of the game but offer feedback on the experience of the game mechanic of jumping. While the players do not tell Molly directly to change the game, these comments appear to direct direction of the design to comply with an emerging community norm of jump feel stemming from the personal experiences of the participants and from tangible feeling of lack of control over the player's character in the game.
 
-This form of interaction can be analysed using the professional framework called MDA. Mechanic is the jump  is ame mechanic, D is the ?, and A is the frustration experienced by fellow testers. Further parallels with MDA are explored later.
+This form of interaction can be analysed using the professional framework called MDA. The Mechanic dimension here is the jump game mechanic, D is the ?, and A is the frustration experienced by fellow testers. Further parallels with MDA are explored later.
 
 
 <!-- We can see that Molly justifies the game feel of a very high fast jump with a narrative response about the character being spaceman. However, the limited amount of time anyone plays her game and her own frustration in playing it is telling. The game feel is frustrating in the wrong way here. Molly seems to initially misconstrue the feedback she is getting here equating her ability to make the game hard as a positive thing. However, towards the end she notes the frustrating nature of the game. -->
@@ -1367,32 +1367,41 @@ While Ed has only just been introduced to the ability to "cramp". He is happy an
 **GDPs allow participants to share and explore their home and professional funds of knowledge and practices in the emerging learning community.**
 
 
-#### Family funds of knowledge
+#### Family funds of knowledge in asset creation and game design
 
-In the last chapter outlined ways in which participants could to create their own graphical and audio assets.
+In the last chapter outlined ways in which participants could to create their own graphical and audio assets and situated this process as a aligning with Cole's conception of surfacing a Funds of Interest).
 
-This process facilitated participants to bring their own interests into the game making process. As outlined in literature [Gee / Ito & Scratch community] , graphical assets along with  via the use of the creation of game narratives), are motivating and sustain engagement.
-While not contributing anything new in this area to the research, these finding support existing research, and this aspect remains a vital part of inclusive game making.
+These findings support existing research on FoI as an inclusive educational practice and offer a rich description of a concrete example which aims to align to inclusive, practice-based frameworks like UDL and PBL.
+
+This process facilitated participants to bring their home and digital life interests into the game making process, a rich cultural source [Livingstone]. As outlined in literature [Gee / Ito & Scratch community] , graphical assets along with  via the use of the creation of game narratives), are motivating and sustain engagement.
+
+The process has parallels in enthusiast communities. For example, in new grounds, itch.io, Scratch communities, and specialist game art sites, the sharing of graphic
+
+_Funds of knowledge in games asset creation_
+
 
 In some of the examples above we saw Molly and Nadine showing identification with graphical making process and the process of bringing it the game.  
 Beyond there internal family interaction, they share this artistic flair or attention to detail which is likely to be a part of their home funds of knowledge into the emerging learning community.
+CAN THIS BE LINKED TO FORMING IDENTITY WITHING THE COMMUNITY VIA A SPECIALISM? THERE IS DATA FROM AN INTERVIEW TO SUPPORT THIS.
 
-NOTE ALSO NARRATIVE OF PEARL (next chapter?)
+
+
+_Funds of knowledge from professional communities_
+
+A potential similar specialism was evident from Dave's guidance of Toby to access professional documentation, and engage in debugging processes using the developer tools section of the web browser. (See appendix 5.x). As a facilitator, this aligned with my previous work with Mozilla web clubs. The enthusiastic sharing of for messing around with technical web tools for learning and fun.
+
+This could have been picked up on and integrated into the design. While I did not do this, the confidence brought to the process to find resources from outside of teh walled garden of the provided resources prompted a change of game paradigm for another family who also made a top down / maze game in P3.
+
+_Funds of knowledge from home game playing experience_
 
 In the above example, Bertie comments on Toby's game which has a dominant game experience of timed jumping, noting "Bertie: "It’s like parkour in Minecraft but timed. It’s like playing the game Wipeout. Have you ever played Wipeout?". Parkour in Minecraft and Wipe out are both game experiences whose main gameplay mechanic is about judging jumps to landing accurately. Bertie makes links to his existing experience of games making comparisons between Toby's game, commercial games and his own. In doing so Bertie is able to show his knowledge and analysis of gameplay patterns to this community. While his motivation is not clear, one interpretation is that Bertie could be making this contribution not only to openly share experience but also as a offering in return for his request for help which he has just made.
 
-GET SOME OTHER  EXAMPLES HERE IF POSSIBLE - LINK TO STATS - AND NEXT CHAPTER.
+LINK TO STATS from coding.
+
 
 A wider exploration of use of FOK in the programme related to art and narrative is explored in chapter six.
 
 
-#### Funds of knowledge from professional and enthusiast communities
-
-This aspect is addressed in the next chapter in part. (or should be)
-
-Dave helps Toby access professional documentation, and debugging processes?
-
-My experience as a facilitator. From Mozilla, from being an enthusiast for messing around for learning and fun.
 
 <!-- In addition to the previous chapters observations....
 ADD IF RELEVANT - research on funds of knowledge motives or benefits of this behaviour may include: ... -->
@@ -1419,17 +1428,23 @@ Is the term idioculture helpful to summarise the observation in this section.
 The cultural aspects of the learning community are further explored in Chapter 7.
 Is there something that merits mentioning here as a link?
 
-## Discussion SECTION
+## Discussion
+
+The majority of this chapter has focused on interpretation of observations of participant interactions with different dimensions of use of GDPS.  
+
+In this discussion section, I propose that GDPs provide learners with a suitable vehicle to engage with coding practices partly due to their position between abstract computational concepts and concrete implementations of code structures. I explore potential implications for facilitators and researchers on use of GDP collection as an  intermediate pedagogical construct.
+
+I also explore GDPS as a mediational strategy using AT concepts.
 
 ### Concrete and relatable levels of abstraction - linking this communities experiences with existing literature
+
+
 
 The process of identifying and working with GDPs in this research process can be mapped as a dialectical process of moving (rising) to the concrete [@sannino_activity_2011].
 
 In this study, experience of the features and behaviour of game are concrete. The concept of design pattern that can be applied to more than one game is more abstract. And more abstract still are computing concepts like abstraction and pattern recognition which are present in the game code and problem solving processes.
 
 TO ADD - The MDA framework , and related work on game design frameworks bring a focus to levels of abstraction. The utility LOA is promoted by Waite and Sentence in a focus of computing education [INSERT HOW AND WHY]. While, I chose not to explore this explicitly in my teaching, one potential avenue to explore is the question, is the design helping participants to make their concrete knowledge potentially transferable to other problems?
-
-
 
 Around this abstract different behaviour patterns form
 And the concept can be embodied on design artefacts
@@ -1440,21 +1455,16 @@ In terms of a research process, this maps in part to the inductive process of th
 
 From the perspective of participants and facilitators, the process can be transferred to other design projects
 
-
-
     There are two types of abstractions: empirical and theoretical. Empirical abstraction
     is a classification of superficial features of phenomena. Theoretical abstraction refers to the identification of the genetic origins of phenomena that may externally be not alike at all. A theoretical abstraction is based on a functional relationship, also called a germ cell.  While observation and categorization are actions at the root of empirical abstraction, practical transformation, change, and experimentation are actions at the root of theoretical abstraction. Theoretical abstraction allows one to generate and project complex, theoretically mastered concrete manifestations and developmental forms of the reality under scrutinyTitle: Activity theory as an activist and interventionist theory, Author: Sannino, Date: 10/2011
 
 
 
-### Discussion on the use of game design patterns in the 3M learning design
-
-The majority of this chapter has focused on interpretation of observations of participant interactions and the resulting cultural processes.  Game design patterns provide learners with a suitable vehicle to engage with coding practices partly due to their position between abstract computational concepts and concrete implementations of code structures. The following section explores potential implications for facilitators and researchers on use of GDP collection as an  intermediate pedagogical construct. The remainder of this chapter discusses the use of game design patterns facilitate the emergence of learner agency.
 
 <!-- A deeper exploration of other concepts may suit another chapter looking at synthesing observations in relation to broader research.  -->
 
 
-#### Design patterns as a mid-level pedagogical framework
+### Design patterns as a mid-level pedagogical framework
 
 <!-- NOTE - PARTS OF THIS WERE MOVED TO THE LIT REVIEW. -->
 
@@ -1485,6 +1495,8 @@ Similarly, here the implementation of GDPs as a key unit of activity and analysi
 
 The observations of this chapter show the advantages of GDP as an intermediate design concept, hovering in the space between too concrete to be repeated and too abstract to be grasped by novice game makers. GDPs create a tangible link between concrete player experience and the affordances of a guided creative process. Learners use of GDP as relatable and flexible constructs that facilitate  communication, sustaining engagement, planning and division of labour. The creation of designed objects using GDPS aid the personal appropriation and the propagation of technical and social processes game making practices.  
 
+
+
 Previously abstract concepts or processes become concrete through familiarisation via direct use and indirect observations through community participation. In many of the outlined uses of GDPs in chapter we can see processes at play that help bridge shifts in design perspective (MDA here?).
 
 Both the GDPs and the sub-actions of the wider activity design become short-cuts which stand in for previously tricky to complete set of actions. Rather than promising the transfer abstract concepts to other domains, we see learners build competency in participation in replicable processes. These processes which aid future iterations of the GDP implementation design cycle. The process of operationalisation of these sets of actions contributes to the creation of an informal, complex networked resource of operations which complement the more visible curated catalogue of GDPs.
@@ -1492,32 +1504,38 @@ Both the GDPs and the sub-actions of the wider activity design become short-cuts
 Game design patterns or their fragments are used as a form of design short cuts. Examples from the above include, _get an enemy in_ , _animate player_ or _get it in the game_ (when referring to transferring an graphical asset from authoring tool to the coding environment). The advantages of such shortcuts are, as discussed, to help with the prioritisation and ideation processes, to facilitate peer propagation of ideas, and potentially to inform debugging and improvements to increase game playability.
 
 
-NOTE - SUPPORT NEEDED FOR SOME OF THE BELOW - AND MORE DISCUSSION NEEDED ON CHALLENGE IN GENERAL
-
 There are challenges of the use of these short cuts and at a more general the design choice to lead with a menu of intermediate-level constructs in the form of a menu of GDPs. There may be confusion over use of terms to new comers and these GPD related terms may hide more complex patterns within the name. For example, the shortcuts in Mark and Ed's interaction hides a large amount of problems solving which seems "overwhelming". GDPs can limit the ideation process through an accelerated approach. Also as the menus themselves are not all used by students, and while GDPs do propagate from student to student, which risk further constraints on the process of asking questions about user experience and exploring ideas before committing to implementation.
 
 
 
-### Discussion on GDPs
+### Implications and beginnings of suggestions for practitioners
+
+
+NOTE - SUPPORT NEEDED FOR SOME OF THE BELOW - AND MORE DISCUSSION NEEDED ON CHALLENGE IN GENERAL
+
+PRESENT IN A TABLE OR VIA SOME EASY TO PARSE HEADINGS.
+
+
+The process of creating a learning design where students were able to choose from a curated set of game design patterns is covered in the design chapter of this thesis. This chapter has begun a process of exploration of the nature and evolution of agency in the practices of the participants through the varied use of GDPs.
+
 <!-- NOTE -  REFRAMING WITH A FOCUS ON AGENCY - IDEALLY THE LATER -->
+<!-- Using a choice of patterns when compared to instructional tutorials (previously explored in methods chapter)  -->
 
-The process of creating a learning design where students were able to choose from a curated set of game design patterns is covered in the design chapter of this thesis. This chapter has begun a process of exploration of the nature and evolution of agency in the practices of the participants through the varied use of GDPs. In this final section I continue to explore emerging thoughts on learner agency, the use of game design patterns, especially within the context of a collection of patterns.
-
-RECAP ON WHAT AGENCY IS HERE? OR NEXT CHAPTER?
-
- <!-- Using a choice of patterns when compared to instructional tutorials (previously explored in methods chapter)  -->
-
-#### GDPs used in mediational strategies and impact on participant agency
-
-WHAT IS THE FUNDAMENTAL POINT HERE AND HOW DOES IT TRANSITION TO THE NEXT CHAPTER?
+**GDPs can be used as meditational strategies within the AT framework and thus conceptual understanding of participant agency**
 
 GDPs are frequently used as mediational strategies [@lecusay_telementoring_2015].
 
-These process contributes to the development of agency on the part of participants.
+This can be understood in relation to relevant socio cultural theory in the following way, affordences, mutual tool development, FoI, etc.
 
----
+We can frame how these process contribute to the development of agency on the part of participants in the following way.
 
-The concept of a restricted activity is outlined in varied educational concepts including Bruner's reducing degrees of freedom [@wood_role_1976]. In the 3M design the process of offering a choice of games patterns emerged to counter a previous open design process of which many learners found too challenging. The patterns emerged chiefly in response to requests from learners and partly from facilitator decision making which broadly matched the criteria of the other study. However, in Eriksson's study the authors selected from an extensive, pre-existing pattern collections [@bjork_patterns_2005].
+BEGIN INTRODUCTION TO ANALYSIS OF AGENCY.
+
+These concepts and this framing is explore in the next chapter with examples that extend beyond the use of GDPs to other cultural processes.
+
+**The concept of a restricted activity helps us understand the value a GDP collection for participants**
+
+The positive impact of restricted choice of activities are outlined in varied educational concepts including Bruner's reducing degrees of freedom [@wood_role_1976]. In the 3M design the process of offering a choice of games patterns emerged to counter a previous open design process of which many learners found too challenging. The patterns emerged chiefly in response to requests from learners and partly from facilitator decision making which broadly matched the criteria of the other study. However, in Eriksson's study the authors selected from an extensive, pre-existing pattern collections [@bjork_patterns_2005].
 
 
 <!-- For exa In the language of double stimulation, a tension of relative inactivity at times is overcome by invitations to playtest and resulting interaction. -->
@@ -1535,18 +1553,20 @@ For example, the use of CT concepts in a framework, listed as part of the initia
 
 <!-- #### Re-examining the problem of PBL approaches considering the role of the potential of GDP collections -->
 
+**Design Pattern collections can help structure a learning design into an inclusive pedagogy**
+
 As explored in the literature review a key challenge to project based learning is finding appropriate conceptual and practical frameworks to scaffold domain specific working practices [@barron_doing_1998]. Different types of scaffolding are available to support PBL and the authors highlight trade-offs between engagement via tinkering and pushing "principled understanding" [@barron_doing_1998, p.63].
 Design patterns have been explored as a form of scaffolding [@ertmer_scaffolding_2019] for project based learning experiences. Research on design online experiences shows value in interrelated scenarios, features and underlying patterns and principles [@mor_assessing_2014; @kali_collaborative_2006].
 
 In computing eduction pattern based instruction has benefits of making complex problems more modular and concrete [@muller_almost_2004-1; @waite_teaching_2021].
 
+The processes described above align with PBL and UDL in a way that merits further investigation in different settings.
+
 <!-- NOTE - Lots of work on pedagogy of e learning done - but now seems quite dated? How did it stand up to time?  -->
 
 
 
-
-
-#### Tensions between facilitating agency and norming practices
+#### Tensions between facilitating agency and norming practices - MOVE  up OR COMPRESS INTO THIS CHAPTER
 
 Participants are able to use the affordances of the existing learning design and add their own evolving practice to them as a way of expressing and building agency.
 
