girona airport authenticity

--- a/_posts/thesis_chapters/2024-6-5-Design.md
+++ b/_posts/thesis_chapters/2024-6-5-Design.md
@@ -1425,12 +1425,8 @@ or this one
 https://docs.google.com/document/d/18HrRPPx0-fj3PXVJTAf2dzYNTBSYGikpV_U0hu46r2c/edit -->
 
 
-#### Exploring dimensions of these barriers through the lens of agency and authenticity
+#### Exploring tensions involving and authentic tool use
 
-Briefly outline, the relationship of agency and (authenticity in relation to AT and other relevant literature pbl)?
-
-Focus on agency.
-And springboarding to the next two chapters.
 
 <!-- NOTE IS THERE OBVIOUS SPACE FOR THIS OR SOMETHING TO SURFACE IN Discussion -->
 
