--- a/_posts/thesis_chapters/tocs/2024-6-6-Gdps.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-6-6-Gdps.md_toc.md
@@ -1,106 +1,96 @@
 -   [The Use of Gameplay Design Patterns "It's like a project in itself,
-    really"](#the-use-of-gameplay-design-patterns-its-like-a-project-in-itself-really){#toc-the-use-of-gameplay-design-patterns-its-like-a-project-in-itself-really}
+    really"](#the-use-of-gameplay-design-patterns-its-like-a-project-in-itself-really)
     -   [Research Questions - March
-        2024](#research-questions---march-2024){#toc-research-questions---march-2024}
-    -   [Chapter outline](#chapter-outline){#toc-chapter-outline}
+        2024](#research-questions---march-2024)
+    -   [Chapter outline](#chapter-outline)
     -   [On GDP as a germ-cell and unit of analysis recap of design
-        patterns](#on-gdp-as-a-germ-cell-and-unit-of-analysis-recap-of-design-patterns){#toc-on-gdp-as-a-germ-cell-and-unit-of-analysis-recap-of-design-patterns}
+        patterns](#on-gdp-as-a-germ-cell-and-unit-of-analysis-recap-of-design-patterns)
         -   [Recap on design patterns and game design
-            patterns](#recap-on-design-patterns-and-game-design-patterns){#toc-recap-on-design-patterns-and-game-design-patterns}
+            patterns](#recap-on-design-patterns-and-game-design-patterns)
         -   [On the utility of identifying a germ cell/ unit of
-            analysis](#on-the-utility-of-identifying-a-germ-cell-unit-of-analysis){#toc-on-the-utility-of-identifying-a-germ-cell-unit-of-analysis}
-    -   [Study of Vignette
-        A](#study-of-vignette-a){#toc-study-of-vignette-a}
+            analysis](#on-the-utility-of-identifying-a-germ-cell-unit-of-analysis)
+    -   [Study of Vignette A](#study-of-vignette-a)
         -   [Descriptive Commentary on Vignette
-            A](#descriptive-commentary-on-vignette-a){#toc-descriptive-commentary-on-vignette-a}
+            A](#descriptive-commentary-on-vignette-a)
     -   [Observations and analysis of use of Game Design Patterns (GDPs)
         by
-        participants](#observations-and-analysis-of-use-of-game-design-patterns-gdps-by-participants){#toc-observations-and-analysis-of-use-of-game-design-patterns-gdps-by-participants}
+        participants](#observations-and-analysis-of-use-of-game-design-patterns-gdps-by-participants)
     -   [The role of GDPs in the personal appropriation of concepts and
-        processes](#the-role-of-gdps-in-the-personal-appropriation-of-concepts-and-processes){#toc-the-role-of-gdps-in-the-personal-appropriation-of-concepts-and-processes}
+        processes](#the-role-of-gdps-in-the-personal-appropriation-of-concepts-and-processes)
     -   [GDPs used in the process of guided
-        participation](#gdps-used-in-the-process-of-guided-participation){#toc-gdps-used-in-the-process-of-guided-participation}
+        participation](#gdps-used-in-the-process-of-guided-participation)
         -   [GDPs offer the potential to assist project navigation,
             acting as a framework for code examples and step-by-step
-            tutorials](#gdps-offer-the-potential-to-assist-project-navigation-acting-as-a-framework-for-code-examples-and-step-by-step-tutorials){#toc-gdps-offer-the-potential-to-assist-project-navigation-acting-as-a-framework-for-code-examples-and-step-by-step-tutorials}
+            tutorials](#gdps-offer-the-potential-to-assist-project-navigation-acting-as-a-framework-for-code-examples-and-step-by-step-tutorials)
         -   [GDPs used to scaffold ideation
-            processes](#gdps-used-to-scaffold-ideation-processes){#toc-gdps-used-to-scaffold-ideation-processes}
+            processes](#gdps-used-to-scaffold-ideation-processes)
             -   [Knowledge of game design patterns used to stimulate and
                 communicate new
-                ideas](#knowledge-of-game-design-patterns-used-to-stimulate-and-communicate-new-ideas){#toc-knowledge-of-game-design-patterns-used-to-stimulate-and-communicate-new-ideas}
+                ideas](#knowledge-of-game-design-patterns-used-to-stimulate-and-communicate-new-ideas)
             -   [The use of GDPs to encourage intuitive and visual
-                prototyping](#the-use-of-gdps-to-encourage-intuitive-and-visual-prototyping){#toc-the-use-of-gdps-to-encourage-intuitive-and-visual-prototyping}
+                prototyping](#the-use-of-gdps-to-encourage-intuitive-and-visual-prototyping)
             -   [GDPs as used by participants in their prioritisation in
                 the ideation
-                process](#gdps-as-used-by-participants-in-their-prioritisation-in-the-ideation-process){#toc-gdps-as-used-by-participants-in-their-prioritisation-in-the-ideation-process}
+                process](#gdps-as-used-by-participants-in-their-prioritisation-in-the-ideation-process)
         -   [GDPs aiding the process of division of
-            labour](#gdps-aiding-the-process-of-division-of-labour){#toc-gdps-aiding-the-process-of-division-of-labour}
+            labour](#gdps-aiding-the-process-of-division-of-labour)
             -   [Working knowledge of different types of GDPs can help
                 participants to divide project elements by
-                pattern](#working-knowledge-of-different-types-of-gdps-can-help-participants-to-divide-project-elements-by-pattern){#toc-working-knowledge-of-different-types-of-gdps-can-help-participants-to-divide-project-elements-by-pattern}
+                pattern](#working-knowledge-of-different-types-of-gdps-can-help-participants-to-divide-project-elements-by-pattern)
             -   [Structuring work processes through implementing modular
                 sub-projects in the form of GDPs can aid division of
-                labour](#structuring-work-processes-through-implementing-modular-sub-projects-in-the-form-of-gdps-can-aid-division-of-labour){#toc-structuring-work-processes-through-implementing-modular-sub-projects-in-the-form-of-gdps-can-aid-division-of-labour}
+                labour](#structuring-work-processes-through-implementing-modular-sub-projects-in-the-form-of-gdps-can-aid-division-of-labour)
             -   [Other notable observations concerning division of
                 labour in the video
-                data](#other-notable-observations-concerning-division-of-labour-in-the-video-data){#toc-other-notable-observations-concerning-division-of-labour-in-the-video-data}
+                data](#other-notable-observations-concerning-division-of-labour-in-the-video-data)
         -   [The role of GDP used in emerging technical
-            processes](#the-role-of-gdp-used-in-emerging-technical-processes){#toc-the-role-of-gdp-used-in-emerging-technical-processes}
+            processes](#the-role-of-gdp-used-in-emerging-technical-processes)
             -   [Use of GDPs to facilitate use of
-                tools](#use-of-gdps-to-facilitate-use-of-tools){#toc-use-of-gdps-to-facilitate-use-of-tools}
+                tools](#use-of-gdps-to-facilitate-use-of-tools)
             -   [Diverse use of technical processes driven by
-                GDPs](#diverse-use-of-technical-processes-driven-by-gdps){#toc-diverse-use-of-technical-processes-driven-by-gdps}
+                GDPs](#diverse-use-of-technical-processes-driven-by-gdps)
             -   [Use of GDPs in the development of shared
-                language](#use-of-gdps-in-the-development-of-shared-language){#toc-use-of-gdps-in-the-development-of-shared-language}
+                language](#use-of-gdps-in-the-development-of-shared-language)
             -   [Code Patching as a guided
-                process](#code-patching-as-a-guided-process){#toc-code-patching-as-a-guided-process}
+                process](#code-patching-as-a-guided-process)
             -   [GDPs used to nurture tactical responses to coding
-                errors](#gdps-used-to-nurture-tactical-responses-to-coding-errors){#toc-gdps-used-to-nurture-tactical-responses-to-coding-errors}
+                errors](#gdps-used-to-nurture-tactical-responses-to-coding-errors)
             -   [Concluding remarks on debugging and
-                revision](#concluding-remarks-on-debugging-and-revision){#toc-concluding-remarks-on-debugging-and-revision}
-    -   [Cultural
-        Dimension](#cultural-dimension){#toc-cultural-dimension}
+                revision](#concluding-remarks-on-debugging-and-revision)
+    -   [Cultural Dimension](#cultural-dimension)
         -   [The role of GDPs to facilitate learners to design for
-            others](#the-role-of-gdps-to-facilitate-learners-to-design-for-others){#toc-the-role-of-gdps-to-facilitate-learners-to-design-for-others}
+            others](#the-role-of-gdps-to-facilitate-learners-to-design-for-others)
             -   [Referring to GDPs (especially during playtesting) can
                 help scaffold the process of imagining the end user
-                experiences.](#referring-to-gdps-especially-during-playtesting-can-help-scaffold-the-process-of-imagining-the-end-user-experiences.){#toc-referring-to-gdps-especially-during-playtesting-can-help-scaffold-the-process-of-imagining-the-end-user-experiences.}
-            -   [GDPs, the scale/nature of project goals & designing for
-                others](#gdps-the-scalenature-of-project-goals-designing-for-others){#toc-gdps-the-scalenature-of-project-goals-designing-for-others}
+                experiences.](#referring-to-gdps-especially-during-playtesting-can-help-scaffold-the-process-of-imagining-the-end-user-experiences.)
             -   [Other examples and interpretation on designing for
                 others / shifts of
-                perspective](#other-examples-and-interpretation-on-designing-for-others-shifts-of-perspective){#toc-other-examples-and-interpretation-on-designing-for-others-shifts-of-perspective}
+                perspective](#other-examples-and-interpretation-on-designing-for-others-shifts-of-perspective)
         -   [Role of playtesting and feedback and
-            GDPs](#role-of-playtesting-and-feedback-and-gdps){#toc-role-of-playtesting-and-feedback-and-gdps}
+            GDPs](#role-of-playtesting-and-feedback-and-gdps)
             -   [GDP concepts and language used in informal feedback for
                 peers to influence modification of
-                games](#gdp-concepts-and-language-used-in-informal-feedback-for-peers-to-influence-modification-of-games){#toc-gdp-concepts-and-language-used-in-informal-feedback-for-peers-to-influence-modification-of-games}
+                games](#gdp-concepts-and-language-used-in-informal-feedback-for-peers-to-influence-modification-of-games)
             -   [The propagation of use of GDPs through
-                playtesting](#the-propagation-of-use-of-gdps-through-playtesting){#toc-the-propagation-of-use-of-gdps-through-playtesting}
+                playtesting](#the-propagation-of-use-of-gdps-through-playtesting)
         -   [GDPs facilitate the use of wider funds of
-            knowledge](#gdps-facilitate-the-use-of-wider-funds-of-knowledge){#toc-gdps-facilitate-the-use-of-wider-funds-of-knowledge}
-            -   [Family funds of
-                knowledge](#family-funds-of-knowledge){#toc-family-funds-of-knowledge}
-            -   [Funds of knowledge from professional and enthusiast
-                communities](#funds-of-knowledge-from-professional-and-enthusiast-communities){#toc-funds-of-knowledge-from-professional-and-enthusiast-communities}
-    -   [Discussion
-        SECTION](#discussion-section){#toc-discussion-section}
-        -   [To add here](#to-add-here){#toc-to-add-here}
-        -   [Discussion on the use of game design patterns in the 3M
-            learning
-            design](#discussion-on-the-use-of-game-design-patterns-in-the-3m-learning-design){#toc-discussion-on-the-use-of-game-design-patterns-in-the-3m-learning-design}
-            -   [Design patterns as a mid-level pedagogical
-                framework](#design-patterns-as-a-mid-level-pedagogical-framework){#toc-design-patterns-as-a-mid-level-pedagogical-framework}
-        -   [Discussion on
-            GDPs](#discussion-on-gdps){#toc-discussion-on-gdps}
-            -   [GDPs used in mediational strategies and impact on
-                participant
-                agency](#gdps-used-in-mediational-strategies-and-impact-on-participant-agency){#toc-gdps-used-in-mediational-strategies-and-impact-on-participant-agency}
+            knowledge](#gdps-facilitate-the-use-of-wider-funds-of-knowledge)
+            -   [Family funds of knowledge in asset creation and game
+                design](#family-funds-of-knowledge-in-asset-creation-and-game-design)
+        -   [Perhaps add here a summary of cultural section if
+            useful](#perhaps-add-here-a-summary-of-cultural-section-if-useful)
+    -   [Discussion](#discussion)
+        -   [Concrete and relatable levels of abstraction - linking this
+            communities experiences with existing
+            literature](#concrete-and-relatable-levels-of-abstraction---linking-this-communities-experiences-with-existing-literature)
+        -   [Design patterns as a mid-level pedagogical
+            framework](#design-patterns-as-a-mid-level-pedagogical-framework)
+        -   [Implications and beginnings of suggestions for
+            practitioners](#implications-and-beginnings-of-suggestions-for-practitioners)
             -   [Tensions between facilitating agency and norming
-                practices](#tensions-between-facilitating-agency-and-norming-practices){#toc-tensions-between-facilitating-agency-and-norming-practices}
-    -   [Chapter
-        Conclusion](#chapter-conclusion){#toc-chapter-conclusion}
+                practices - MOVE up OR COMPRESS INTO THIS
+                CHAPTER](#tensions-between-facilitating-agency-and-norming-practices---move-up-or-compress-into-this-chapter)
+    -   [Chapter Conclusion](#chapter-conclusion)
         -   [Summary of the pedagogical opportunities of Game Design
-            Patterns](#summary-of-the-pedagogical-opportunities-of-game-design-patterns){#toc-summary-of-the-pedagogical-opportunities-of-game-design-patterns}
-        -   [Transition to next
-            chapter](#transition-to-next-chapter){#toc-transition-to-next-chapter}
+            Patterns](#summary-of-the-pedagogical-opportunities-of-game-design-patterns)
+        -   [Transition to next chapter](#transition-to-next-chapter)
